Initial version of home page. Links need to be changed and fixed.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-Hello world!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+	<title>LittleEdit - A Littlewood save editor </title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+	<link rel="stylesheet" href="css/home.css">
+	<meta charset="UTF-8" />
+
+</head>
+
+
+<body>
+	<main>
+		<div class="site-container">
+		<!-- Surround the contents of the page in a div, this fixes the problem where the footer does not completely extend to the bottom of the page. -->
+		
+			<nav class="navbar">
+			
+				<ul>
+					<li> Home </li>
+					<li> Downloads </li>
+					<li> About </li>
+				</ul>
+			
+			</nav>
+		
+		
+		
+		</div>
+		
+		<div class="main-container">
+			<div class="flavortext">
+				A save editor for Littlewood, an open-ended relaxing RPG.
+			</div>
+		
+
+		<div class="download-links">
+			<section>
+				<a href='https://github.com/ClearwaterTM/LittleEdit/releases' class='github-button'>
+					Download
+					<span>latest version from GitHub</span>
+				</a>
+			</section>
+			<section>
+
+				<a href='https://github.com/ClearwaterTM/LittleEdit/releases' class='page-button'>
+					<span>View older versions</span>
+				</a>
+			</section>
+
+		</div>
+		
+		<div class="steamwidget">
+		
+			<iframe src="http://store.steampowered.com/widget/894940" frameborder="0" width="646" height="190"></iframe>
+		
+		</div>
+
+		
+		<footer>
+		
+			<div class="host">
+			Hosted on⠀<a href="https://pages.github.com/">GitHub.io.⠀</a>
+			</div>
+			<div class="writtenin">
+			All HTML and CSS on this page was written from scratch in Notepad++!
+			</div>
+		
+			<div class="githublogo">
+			<a href="https://pages.github.com/"> <img src="img/GitHub_Logo_White.png" alt="GitHub"> </a>
+			
+			</div>
+		
+		</footer>
+	</main>
+</body>
