Removed steam widget frame due to GitHub.io blocking loading of insecure frames.

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 
 		</div>
 		
-		<div class="steamwidget">
+		<!-- <div class="steamwidget">
 		
 			<iframe src="http://store.steampowered.com/widget/894940" frameborder="0" width="646" height="190"></iframe>
 		
-		</div>
+		</div> -->
 
 		
 		<footer>
