Fixed up a few links in the home page. Added the features page. More content to be added at a later stage of development. Refined a few elements in the CSS file.

--- a/index.html
+++ b/index.html
@@ -15,26 +15,27 @@
 	<main>
 		<div class="site-container">
 		<!-- Surround the contents of the page in a div, this fixes the problem where the footer does not completely extend to the bottom of the page. -->
-		
+
 			<nav class="navbar">
-			
+
 				<ul>
-					<li> Home </li>
+					<li> <a href="./index.html"> Home</a> </li>
+					<li> <a href="./features.html">Features </a> </li>
 					<li> Downloads </li>
 					<li> About </li>
 				</ul>
-			
+
 			</nav>
-		
-		
-		
+
+
+
 		</div>
-		
+
 		<div class="main-container">
 			<div class="flavortext">
 				A save editor for Littlewood, an open-ended relaxing RPG.
 			</div>
-		
+
 
 		<div class="download-links">
 			<section>
@@ -51,28 +52,28 @@
 			</section>
 
 		</div>
-		
+
 		<!-- <div class="steamwidget">
-		
+
 			<iframe src="http://store.steampowered.com/widget/894940" frameborder="0" width="646" height="190"></iframe>
-		
+
 		</div> -->
 
-		
+
 		<footer>
-		
+
 			<div class="host">
 			Hosted on⠀<a href="https://pages.github.com/">GitHub.io.⠀</a>
 			</div>
 			<div class="writtenin">
 			All HTML and CSS on this page was written from scratch in Notepad++!
 			</div>
-		
+
 			<div class="githublogo">
 			<a href="https://pages.github.com/"> <img src="img/GitHub_Logo_White.png" alt="GitHub"> </a>
-			
+
 			</div>
-		
+
 		</footer>
 	</main>
 </body>
