Added a missing link.

--- a/features.html
+++ b/features.html
@@ -57,7 +57,7 @@
           				</a>
           			</section>
 
-            <h6>Programmed in C++ with the Nana GUI library. </h6>
+            <h6>Programmed in C++ with the <a href="http://nanapro.org/en-us/"> Nana GUI library. </a></h6>
 
           </center>
 
