Fixed off-center text on the home page.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<div class="main-container">
 			<div class="flavortext">
-				A save editor for Littlewood, an open-ended relaxing RPG.
+				<center>A save editor for Littlewood, an open-ended relaxing RPG.</center>
 			</div>
 
 
