Missed these two pages in the previous commit. Fixed.

--- a/features.html
+++ b/features.html
@@ -21,8 +21,9 @@
   				<ul>
   					<li> <a href="./index.html"> Home</a> </li>
   					<li> <a href="./features.html">Features </a> </li>
-  					<li> Downloads </li>
-  					<li> About </li>
+  					<li> <a href="./downloads.html">Downloads </a></li>
+            <li> <a href="./docs.html">Documentation </a></li>
+  					<li> <a href="./about.html">About </a></li>
   				</ul>
 
   			</nav>
