Added documentation pages. Moved front end of documentation to a seperate folder. Updates to the CSS for a different style for the documentation. Small tweaks to the navbar at the top of each page.

--- a/features.html
+++ b/features.html
@@ -22,7 +22,7 @@
   					<li> <a href="./index.html"> Home</a> </li>
   					<li> <a href="./features.html">Features </a> </li>
   					<li> <a href="./downloads.html">Downloads </a></li>
-            <li> <a href="./docs.html">Documentation </a></li>
+					<li> <a href="./documentation">Documentation </a></li>
   					<li> <a href="./about.html">About </a></li>
   				</ul>
 
@@ -30,7 +30,7 @@
 
 			</nav>
 
-      <div class="featureblock1">
+      <div class="featureblock">
 
           <center>
             <h2>A simple and easy to use save editor for Littlewood.</h2>
