--- a/documentation/index.html
+++ b/documentation/index.html
@@ -3,15 +3,16 @@
 
 <head>
 
-	<title>LittleEdit - A Littlewood save editor </title>
+	<title>LittleEdit Documentation</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-	<link rel="stylesheet" href="css/home.css">
+	<link href='https://fonts.googleapis.com/css2?family=Titillium+Web' rel='stylesheet'>
+	<link rel="stylesheet" href="../css/home.css">
 	<meta charset="UTF-8" />
 
 </head>
 
-
-<body>
+<!-- Don't use a background image for the docs page for the sake of legibility.-->
+<body class="docsbody">
 	<main>
 		<div class="site-container">
 		<!-- Surround the contents of the page in a div, this fixes the problem where the footer does not completely extend to the bottom of the page. -->
@@ -22,7 +23,7 @@
 					<li> <a href="./index.html"> Home</a> </li>
 					<li> <a href="./features.html">Features </a> </li>
 					<li> <a href="./downloads.html">Downloads </a></li>
-					<li> <a href="./docs.html">Documentation </a></li>
+					<li> <a href="./documentation">Documentation </a></li>
 					<li> <a href="./about.html">About </a></li>
 				</ul>
 
@@ -33,8 +34,31 @@
 		</div>
 
 		<div class="main-container">
-			<div class="notyetready">
-				Under construction. Stay tuned!
+			<div class="docsblock">
+				<h2><b>LittleEdit - User Documentation</b></h2>
+
+				Welcome! This is the documentation & help page for LittleEdit.
+
+				<br><br>
+
+				<ul>
+					<li>
+						<h4> <a href="./installation.html"> Download and installation </a></h4>
+							<p>How to download LittleEdit and install it for use.</p>
+					</li>
+
+					<li>
+							<h4> <a href="./firsttime"> Getting started </a></h4>
+							<p> Learn how to use LittleEdit by following an example modification. </p>
+
+					</li>
+
+
+					<li>
+							<h4> <a href="./troubleshooting.html"> Troubleshooting </a></h4>
+							<p> Having problems? This section may be able to help you. </p>
+
+					</li>
 			</div>
 
 
