--- a/downloads.html
+++ b/downloads.html
@@ -22,7 +22,7 @@
 					<li> <a href="./index.html"> Home</a> </li>
 					<li> <a href="./features.html">Features </a> </li>
 					<li> <a href="./downloads.html">Downloads </a></li>
-					<li> <a href="./docs.html">Documentation </a></li>
+					<li> <a href="./documentation">Documentation </a></li>
 					<li> <a href="./about.html">About </a></li>
 				</ul>
 
