Quickfix for the documentation pages as they weren't loading in CSS/images.

--- a/documentation/installation.html
+++ b/documentation/installation.html
@@ -6,7 +6,7 @@
 	<title>LittleEdit Documentation</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css2?family=Titillium+Web' rel='stylesheet'>
-	<link rel="stylesheet" href="css/home.css">
+	<link rel="stylesheet" href="../css/home.css">
 	<meta charset="UTF-8" />
 
 </head>
@@ -133,7 +133,7 @@
 			</div>
 
 			<div class="githublogo">
-			<a href="https://pages.github.com/"> <img src="img/GitHub_Logo_White.png" alt="GitHub"> </a>
+			<a href="https://pages.github.com/"> <img src="../img/GitHub_Logo_White.png" alt="GitHub"> </a>
 
 			</div>
 
