--- a/documentation/index.html
+++ b/documentation/index.html
@@ -72,7 +72,7 @@
 			</div>
 
 			<div class="githublogo">
-			<a href="https://pages.github.com/"> <img src="img/GitHub_Logo_White.png" alt="GitHub"> </a>
+			<a href="https://pages.github.com/"> <img src="../img/GitHub_Logo_White.png" alt="GitHub"> </a>
 
 			</div>
 
