Another quickfix for the doc pages.

--- a/documentation/installation.html
+++ b/documentation/installation.html
@@ -67,7 +67,7 @@
                   <p> LittleEdit can also be obtained from the downloads page of this website. <br>
                     Note that some versions available from this page may be outdated, and no longer supported. </p>
 
-                    <a href='./downloads.html'> Click here to go to the downloads page. </a>
+                    <a href='../downloads.html'> Click here to go to the downloads page. </a>
 										<br><br>
                 </li>
                 <li>
