Modified HTML structure to be fully W3C-compliant.

--- a/about.html
+++ b/about.html
@@ -37,7 +37,6 @@
 				Under construction. Stay tuned!
 			</div>
 
-
 		<footer>
 
 			<div class="host">
@@ -51,7 +50,7 @@
 			<a href="https://pages.github.com/"> <img src="img/GitHub_Logo_White.png" alt="GitHub"> </a>
 
 			</div>
-
 		</footer>
+		</div>
 	</main>
 </body>
