--- a/documentation/index.html
+++ b/documentation/index.html
@@ -30,7 +30,6 @@
 			</nav>
 
 
-
 		</div>
 
 		<div class="main-container">
@@ -59,7 +58,9 @@
 							<p> Having problems? This section may be able to help you. </p>
 
 					</li>
+				</ul>
 			</div>
+		</div>
 
 
 		<footer>
@@ -75,7 +76,6 @@
 			<a href="https://pages.github.com/"> <img src="../img/GitHub_Logo_White.png" alt="GitHub"> </a>
 
 			</div>
-
 		</footer>
 	</main>
 </body>
