--- a/documentation/installation.html
+++ b/documentation/installation.html
@@ -34,7 +34,7 @@
 
 		<div class="main-container">
 			<div class="docsblock">
-				<h2><b>LittleEdit - User Documentation</b></h3>
+				<h3><b>LittleEdit - User Documentation</b></h3>
 
 				<h2><u>Download and Installation</u></h2>
 
@@ -45,25 +45,21 @@
              <p> You can download LittleEdit in a number of different ways. The simplest way to do so is via the GitHub release page. </p>
              <p> Alternatively, you can visit the download page on this website, or compile a version from the source code of the repository. </p>
 
-
             <ol>
-                <li><u>GitHub release page</u>
-
-                  <p> Click on the button below to download LittleEdit from the GitHub release page. </p>
-
-                  <section>
-            				<a href='https://github.com/ClearwaterTM/LittleEdit/releases' class='github-button'>
-            					Download
-            					<span>latest version from GitHub</span>
-            				</a>
+                <li>
+					<u>GitHub release page</u>
+					<p> Click on the button below to download LittleEdit from the GitHub release page. </p>
+					<div>
+            			<a href='https://github.com/ClearwaterTM/LittleEdit/releases' class='github-button'>
+            				Download
+            				<span>latest version from GitHub</span>
+            			</a>
                     <br><br>
-            			</section>
-
-
+            		</div>
                 </li>
+				
                 <li>
                   <u>Website releases</u>
-
                   <p> LittleEdit can also be obtained from the downloads page of this website. <br>
                     Note that some versions available from this page may be outdated, and no longer supported. </p>
 
@@ -77,7 +73,7 @@
 									<p> <b>IMPORTANT: LittleEdit can currently only be compiled on a Windows operating system.</b></p>
 									<p> You will need to download and install the following: </p>
 										<ul class="prerequisites">
-												<li> <a href="https://git-scm.com/"> Git </a></li>
+												<li> <a href="https://git-scm.com/"> Git </a> </li>
 												<li> <a href="https://visualstudio.microsoft.com/"> Microsoft Visual Studio 2019 </a></li>
 												<li> <a href="https://github.com/microsoft/vcpkg">Microsoft Visual Studio Package Manager (vcpkg) </a></li>
 												<li> <a href="http://nanapro.org/"> Nana </a></li>
@@ -89,6 +85,7 @@
 										Click on Build -> Rebuild Solution to compile the executable. </p>
 									</li>
 								</ol>
+								
 										<li>
 											<h4><u>Installation</u></h4>
 
@@ -113,14 +110,10 @@
 
 											</ol>
 
-
-											<p> </p>
 											 </li>
+											 </ol>
 			</div>
 
-
-
-		</ol>
 
 
 		<footer>
@@ -138,5 +131,6 @@
 			</div>
 
 		</footer>
+		</div>
 	</main>
 </body>
