--- a/features.html
+++ b/features.html
@@ -27,12 +27,11 @@
   				</ul>
 
   			</nav>
+			</div>
 
-			</nav>
 
       <div class="featureblock">
 
-          <center>
             <h2>A simple and easy to use save editor for Littlewood.</h2>
 
             <br>
@@ -51,18 +50,17 @@
 
               <br>
               <div>
-          			<section>
+          			<div>
           				<a href='https://github.com/ClearwaterTM/LittleEdit/releases' class='github-button'>
           					Download
           					<span>latest version from GitHub</span>
           				</a>
-          			</section>
+          			</div>
 
             <h6>Programmed in C++ with the <a href="http://nanapro.org/en-us/"> Nana GUI library. </a></h6>
 
-          </center>
-
       </div>
+	  </div>
 
 
       <footer>
