--- a/index.html
+++ b/index.html
@@ -28,29 +28,28 @@
 
 			</nav>
 
-
-
 		</div>
 
 		<div class="main-container">
 			<div class="flavortext">
-				<center>A save editor for Littlewood, an open-ended relaxing RPG.</center>
+				<p>A save editor for Littlewood, an open-ended relaxing RPG.</p>
 			</div>
+		
 
 
 		<div class="download-links">
-			<section>
+			<div>
 				<a href='https://github.com/ClearwaterTM/LittleEdit/releases' class='github-button'>
 					Download
 					<span>latest version from GitHub</span>
 				</a>
-			</section>
-			<section>
+			</div>
+			<div>
 
 				<a href='https://github.com/ClearwaterTM/LittleEdit/releases' class='page-button'>
 					<span>View older versions</span>
 				</a>
-			</section>
+			</div>
 
 		</div>
 
@@ -74,7 +73,9 @@
 			<a href="https://pages.github.com/"> <img src="img/GitHub_Logo_White.png" alt="GitHub"> </a>
 
 			</div>
+			
 
 		</footer>
+		</div>
 	</main>
 </body>
